--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,23 @@
 spring:
   application:
     name: chat-app
-
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 jwt:
   access-expiration: 900 # 15 minutes
   refresh-expiration: 2_678_400 # 15 minutes
   secret-key: classpath:jwt-secret.key
 
+logging:
+  level:
+    com.kvanzi.chatapp: debug
+
 server:
   port: 8080
+
