--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 
     compileOnly 'org.mapstruct:mapstruct:1.6.1'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'
+
+    implementation 'redis.clients:jedis:6.0.0'
 }
