--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,13 @@ spring:
       port: 6379
       username: default
       timeout: 2000ms
+    mongodb:
+      database: chat_app
+      username: mongo
+      password: mongo
+      port: 27017
+      host: localhost
+      authentication-database: admin
 
 jwt:
   access-expiration-sec: 900 # 15 minutes
